@@ -7,6 +7,8 @@ Changes in @NEW@:
     * The preMigrateVersion property now reflects the version of the
       product definition as found in the serialized XML representation
       prior to applying all migrations. (RPCL-66)
+    * Older versions of product definition XML data can now be saved.
+      (RPCL-67)
 
 Changes in 4.0:
   o New Feature:
